--- a/test/index.html
+++ b/test/index.html
@@ -1,12 +1,12 @@
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>Mocha Tests</title>
-  <link rel="stylesheet" href="../node_modules/mocha/mocha.css" />
-</head>
-<body>
-  <div id="mocha"></div>
-  <script src="../node_modules/mocha/mocha.js"></script>
-  <script src="./.tmp/browser.js"></script>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Mocha Tests</title>
+    <link rel="stylesheet" href="mocha.css" />
+  </head>
+  <body>
+    <div id="mocha"></div>
+    <script src="mocha.js"></script>
+    <script src="tests.js"></script>
+  </body>
 </html>
