--- a/test/index.html
+++ b/test/index.html
@@ -7,6 +7,7 @@
   <body>
     <div id="mocha"></div>
     <script src="mocha.js"></script>
+    <script src="yayson.js"></script>
     <script src="tests.js"></script>
   </body>
 </html>
